// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should implement random correctly 1`] = `"kQAoNxiStA_Rf5f4GUaReso_mduq8k49BanZJe7UGc1tBm3Y"`;

exports[`feature-random should implement random correctly 2`] = `"kQDPKn6gSohB6mUND4WuahScwfQwxzNsIeHBhciOkGS11bOP"`;

exports[`feature-random should implement random correctly 3`] = `"kQAOXUdVBgjtYQO3d8KfOXOMBH9tflA_gJ_9dIjKkpV8jcST"`;

exports[`feature-random should implement random correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQAoNxiStA_Rf5f4GUaReso_mduq8k49BanZJe7UGc1tBm3Y",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 16411n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQAoNxiStA_Rf5f4GUaReso_mduq8k49BanZJe7UGc1tBm3Y",
            "to": "kQDPKn6gSohB6mUND4WuahScwfQwxzNsIeHBhciOkGS11bOP",
            "type": "internal",
            "value": 9971477000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should implement random correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQAoNxiStA_Rf5f4GUaReso_mduq8k49BanZJe7UGc1tBm3Y",
          "to": "kQDPKn6gSohB6mUND4WuahScwfQwxzNsIeHBhciOkGS11bOP",
          "type": "internal",
          "value": 9971477000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14239n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDPKn6gSohB6mUND4WuahScwfQwxzNsIeHBhciOkGS11bOP",
            "to": "kQAOXUdVBgjtYQO3d8KfOXOMBH9tflA_gJ_9dIjKkpV8jcST",
            "type": "internal",
            "value": 9948729000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should implement random correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDPKn6gSohB6mUND4WuahScwfQwxzNsIeHBhciOkGS11bOP",
          "to": "kQAOXUdVBgjtYQO3d8KfOXOMBH9tflA_gJ_9dIjKkpV8jcST",
          "type": "internal",
          "value": 9948729000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14175n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQAOXUdVBgjtYQO3d8KfOXOMBH9tflA_gJ_9dIjKkpV8jcST",
            "to": "kQAOXUdVBgjtYQO3d8KfOXOMBH9tflA_gJ_9dIjKkpV8jcST",
            "type": "internal",
            "value": 9926037000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQAOXUdVBgjtYQO3d8KfOXOMBH9tflA_gJ_9dIjKkpV8jcST",
          "to": "kQAOXUdVBgjtYQO3d8KfOXOMBH9tflA_gJ_9dIjKkpV8jcST",
          "type": "internal",
          "value": 9926037000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3219n,
      },
    ],
  },
]
`;
